--- a/7/index.html
+++ b/7/index.html
@@ -89,7 +89,7 @@
         <fieldset class="ad-form__element ad-form__element--wide ad-form__element--title">
           <label class="ad-form__label" for="title">Заголовок объявления</label>
           <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" required minlength="30" maxlength="100"
-          data-pristine-required-message="Обязательное поле"
+          data-pristine-required-message="Это поле должно быть заполнено"
           data-pristine-minlength-message="Минимальная длина 30 символов"
           data-pristine-maxlength-message="Максимальная длина 100 символов">
 
@@ -110,9 +110,9 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--price">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" required min="100000"
+          <input id="price" name="price" type="number" placeholder="5000" required max="100000"
           data-pristine-required-message="Обязательное поле"
-          data-pristine-min-message="Минимальнoe значение 100000">
+          data-pristine-max-message="Максимальнoe значение 100 000">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
@@ -137,13 +137,13 @@
             <option value="100">100 комнат</option>
           </select>
         </fieldset>
-        <fieldset class="ad-form__element ad-form__element--room">
+        <fieldset class="ad-form__element">
           <label class="ad-form__label" for="capacity">Количество мест</label>
           <select id="capacity" name="capacity">
             <option value="3" selected>для 3 гостей</option>
             <option value="2">для 2 гостей</option>
             <option value="1">для 1 гостя</option>
-            <option value="0">не для гостей</option>
+            <option value="100">не для гостей</option>
           </select>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide features">
