валидация время заезда и цена за ночь

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <input id="price" name="price" type="number" placeholder="1000" required min="0" max="100000"
           data-pristine-required-message="Обязательное поле"
           data-pristine-max-message="Максимальнoe значение 100 000"
-          data-pristine-min-message="0">
+          data-pristine-min-message="">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
